--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
            <div class="column">
              <div class="card">
                <h3> Slither io by CODE LEGEND </h3>
-               <img src="c1.jpg" alt="">
+               <img src="c1.JPG" alt="">
 
              </div>
            </div>
@@ -96,7 +96,7 @@
            <div class="column">
              <div class="card">
                <h3>Flip 3D by MASTER ANDRAS</h3>
-               <img src="c2.jpg" alt="">
+               <img src="c2.JPG" alt="">
 
              </div>
            </div>
@@ -104,14 +104,14 @@
            <div class="column">
              <div class="card">
                <h3>Slime Ninja by DARK LAVA </h3>
-               <img src="c3.jpg" alt="">
+               <img src="c3.JPG" alt="">
              </div>
            </div>
 
            <div class="column">
              <div class="card">
                <h3>Flappy Bird by HYPER PIXEL</h3>
-               <img src="c4.jpg" alt="">
+               <img src="c4.JPG" alt="">
 
              </div>
            </div>
